# legal-clause-risk-scorer

./: .gitignore  IMPROVEMENTS.md  QUALITY_IMPROVEMENTS_SUMMARY.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/legal_clause_risk_scorer/: __init__.py
src/legal_clause_risk_scorer/data/: __init__.py  loader.py  preprocessing.py
src/legal_clause_risk_scorer/evaluation/: __init__.py  metrics.py
src/legal_clause_risk_scorer/models/: __init__.py  components.py  model.py
src/legal_clause_risk_scorer/training/: __init__.py  trainer.py
src/legal_clause_risk_scorer/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
