[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-clause-risk-scorer"
version = "1.0.0"
description = "A contract clause risk assessment system that identifies potentially unfavorable legal terms in employment contracts and NDAs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Legal AI Research Team", email = "team@legalai.example.com"}
]
keywords = ["legal", "nlp", "contract-analysis", "risk-assessment", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]
dependencies = [
    "transformers>=4.21.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.10.0",
    "evaluate>=0.4.0",
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "scikit-learn>=1.1.0",
    "numpy>=1.21.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "PyYAML>=6.0",
    "mlflow>=2.0.0",
    "accelerate>=0.20.0",
    "tqdm>=4.64.0",
    "joblib>=1.2.0",
    "nltk>=3.8",
    "spacy>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.15.0"
]

[project.urls]
Homepage = "https://github.com/legal-ai/legal-clause-risk-scorer"
Documentation = "https://legal-clause-risk-scorer.readthedocs.io/"
Repository = "https://github.com/legal-ai/legal-clause-risk-scorer.git"
"Bug Tracker" = "https://github.com/legal-ai/legal-clause-risk-scorer/issues"

[project.scripts]
legal-risk-train = "legal_clause_risk_scorer.scripts.train:main"
legal-risk-eval = "legal_clause_risk_scorer.scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/legal_clause_risk_scorer --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "sentence_transformers.*",
    "datasets.*",
    "evaluate.*",
    "mlflow.*",
    "accelerate.*",
    "spacy.*",
    "nltk.*"
]
ignore_missing_imports = true